samples/_failures_safe/1761694394_51c167_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14d2b70e.c: In function ‘main’:
./samples/SAFE/__tmp_14d2b70e.c:126:16: error: missing terminating " character
  126 |         printf("Entry added successfully.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_14d2b70e.c:126:9: error: expected expression at end of input
  126 |         printf("Entry added successfully.\n
      |         ^~~~~~
./samples/SAFE/__tmp_14d2b70e.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14d2b70e.c:126:9: error: expected declaration or statement at end of input
